Verif/Test/Invalide/test_erreur_3.78-20.deca
// Description:
//    Programme soulevant l'erreur (3.78)
// Resultats:
//    Erreur contextuelle
//    Ligne 14 : Les types 'String' et 'type_null' sont incompatibles avec l'opérateur binaire '>' (règle 3.78)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 14/01/2012

boolean var;
{
   var = "a" > null;
}